@@ -20,27 +20,38 @@ This guide uses an EC2 VM in AWS
 #### Create a new vm
 * https://aws.amazon.com/ec2/
 
+The options selected in creating this VM are for a proof-of-concept build only. This VM is intended to be used in the context of following a tutorial, not as a production system. 
+
 ##### Step 1: Choose an Amazon Machine Image (AMI)
 ```
 Amazon Linux 2 AMI (HVM), SSD Volume Type - ami-0b898040803850657 (64-bit x86) / ami-0ad82a384c06c911e (64-bit Arm)
 ```
 ##### Step 2: Choose an Instance Type
 ```
-	Family: General purpose
-	Type: t2.micro
-	vCPUs: 1
-	Memory: 1
-	Instance Storage: EBS only
-	EBS-Optimized: -
-	Network Performance: Low to Moderate
+Family: General purpose
+Type: t2.medium
+vCPUs: 1
+Memory: 4
+Instance Storage: EBS only
+EBS-Optimized Available: Yes
+Network Performance: Low to Moderate
 ```
 ##### Step 3: Configure Instance Details
 ```
-	Number of instances: 	1
-	Network: (default)
-	Subnet: No preference (default subnet in any Availability Zone)
-	Assign Public IP: Use subnet setting (Enable)
-	IAM role: None
+Number of instances: 1
+Purchasing option: unchecked
+Network: (default)
+Subnet: No preference (default subnet in any Availability Zone)
+Assign Public IP: Use subnet setting (Enable)
+Placement group: unchecked
+Capacity Reservation: Open
+IAM role: None
+Shutdown behavior: Stop
+Enable termination protection: NO
+Monitoring: NO
+Tenancy: Shared
+Elastic Inference: NO
+T2/T3 Unlimited: NO
 ```
 
 ##### Step 4: Add Storage
@@ -48,9 +59,10 @@ Amazon Linux 2 AMI (HVM), SSD Volume Type - ami-0b898040803850657 (64-bit x86) /
 Volume Type: Root
 Device: /dev/xvda
 Snapshot: snap-ad8e61f8
-Size (GiB): 8
+Size (GiB): 32
 Volume Type: General Purpose SSD (GP2)
 IOPS: 100 / 3000
+Throughput (MB/s): N/A
 Delete on Termination: Yes
 Encrypted: Not Encrypted
 ```
@@ -123,19 +135,14 @@ date
 sudo reboot
 ```
 
-##### Copy the JBoss EAP zip file to the EC2 VM
+##### Copy the JBoss EAP zip file to the /tmp directory on the EC2 VM
 ```
-scp -i pemfile.pem ~/Downloads/jboss-eap-7.0.0.zip ec2-user@[ec2.ipa.ddr.ess]:~
+scp -i pemfile.pem ~/Downloads/jboss-eap-7.0.0.zip ec2-user@[ec2.ipa.ddr.ess]:/tmp
 ```
 
 ##### Connect via SSH
 ```
 ssh -i pemfile.pem ec2-user@[ec2.ipa.ddr.ess]
-```
-
-##### Move the zip file to the /tmp directory
-```
-mv ~/jboss-eap-7.0.0.zip /tmp
 ```
 
 ##### Check the time
@@ -165,7 +172,7 @@ sudo usermod -aG wheel [your user account name]
 
 ##### Switch to your user account
 ```
-su -l [your user account name]
+su [your user account name]
 ```
 	
 ##### Go home
@@ -213,7 +220,18 @@ wget http://ipinfo.io/ip -qO -
 ```
 wget -O speedtest-cli https://raw.githubusercontent.com/sivel/speedtest-cli/master/speedtest.py
 chmod +x speedtest-cli
-./speedtest_cli
+./speedtest-cli
+```
+```
+Retrieving speedtest.net configuration...
+Testing from Amazon (ip address)...
+Retrieving speedtest.net server list...
+Selecting best server based on ping...
+Hosted by Shentel Service Company (Ashburn, VA) [0.98 km]: 3.861 ms
+Testing download speed................................................................................
+Download: 883.80 Mbit/s
+Testing upload speed................................................................................................
+Upload: 854.43 Mbit/s
 ```
 
 #### Install OpenJDK 1.8
@@ -229,7 +247,128 @@ openjdk version "1.8.0_201"
 OpenJDK Runtime Environment (build 1.8.0_201-b09)
 OpenJDK 64-Bit Server VM (build 25.201-b09, mixed mode)
 ```
+#### Install JBoss
+Running JBoss on the EC2 VM shows that the VM has enough memory to run JBoss at all...
+```
+cd /tmp	
+unzip jboss-eap-7.0.0.zip
+cd jboss-eap-7.0.0
+bin/standalone.sh
+```
+```
+=========================================================================
 
+  JBoss Bootstrap Environment
+
+  JBOSS_HOME: /tmp/jboss-eap-7.0
+
+  JAVA: java
+
+  JAVA_OPTS:  -server -verbose:gc -Xloggc:"/tmp/jboss-eap-7.0/standalone/log/gc.log" -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=5 -XX:GCLogFileSize=3M -XX:-TraceClassUnloading -Xms1303m -Xmx1303m -XX:MetaspaceSize=96M -XX:MaxMetaspaceSize=256m -Djava.net.preferIPv4Stack=true -Djboss.modules.system.pkgs=org.jboss.byteman -Djava.awt.headless=true
+
+=========================================================================
+
+11:15:42,737 INFO  [org.jboss.modules] (main) JBoss Modules version 1.5.1.Final-redhat-1
+11:15:42,951 INFO  [org.jboss.msc] (main) JBoss MSC version 1.2.6.Final-redhat-1
+11:15:43,032 INFO  [org.jboss.as] (MSC service thread 1-3) WFLYSRV0049: JBoss EAP 7.0.0.GA (WildFly Core 2.1.2.Final-redhat-1) starting
+11:15:44,354 INFO  [org.jboss.as.server] (Controller Boot Thread) WFLYSRV0039: Creating http management service using socket-binding (management-http)
+11:15:44,379 INFO  [org.xnio] (MSC service thread 1-4) XNIO version 3.3.6.Final-redhat-1
+11:15:44,453 INFO  [org.xnio.nio] (MSC service thread 1-4) XNIO NIO Implementation Version 3.3.6.Final-redhat-1
+11:15:44,528 INFO  [org.wildfly.extension.io] (ServerService Thread Pool -- 37) WFLYIO001: Worker 'default' has auto-configured to 4 core threads with 32 task threads based on your 2 available processors
+11:15:44,539 INFO  [org.jboss.as.clustering.infinispan] (ServerService Thread Pool -- 38) WFLYCLINF0001: Activating Infinispan subsystem.
+11:15:44,541 INFO  [org.jboss.as.connector.subsystems.datasources] (ServerService Thread Pool -- 33) WFLYJCA0004: Deploying JDBC-compliant driver class org.h2.Driver (version 1.3)
+11:15:44,593 INFO  [org.jboss.remoting] (MSC service thread 1-4) JBoss Remoting version 4.0.18.Final-redhat-1
+11:15:44,595 INFO  [org.jboss.as.connector] (MSC service thread 1-1) WFLYJCA0009: Starting JCA Subsystem (WildFly/IronJacamar 1.3.3.Final-redhat-1)
+11:15:44,603 INFO  [org.jboss.as.connector.deployers.jdbc] (MSC service thread 1-1) WFLYJCA0018: Started Driver service with driver-name = h2
+11:15:44,617 INFO  [org.jboss.as.jsf] (ServerService Thread Pool -- 44) WFLYJSF0007: Activated the following JSF Implementations: [main]
+11:15:44,678 INFO  [org.jboss.as.naming] (ServerService Thread Pool -- 46) WFLYNAM0001: Activating Naming Subsystem
+11:15:44,743 WARN  [org.jboss.as.txn] (ServerService Thread Pool -- 54) WFLYTX0013: Node identifier property is set to the default value. Please make sure it is unique.
+11:15:44,763 INFO  [org.jboss.as.webservices] (ServerService Thread Pool -- 56) WFLYWS0002: Activating WebServices Extension
+11:15:44,771 INFO  [org.jboss.as.security] (ServerService Thread Pool -- 53) WFLYSEC0002: Activating Security Subsystem
+11:15:44,780 INFO  [org.wildfly.extension.undertow] (MSC service thread 1-2) WFLYUT0003: Undertow 1.3.21.Final-redhat-1 starting
+11:15:44,787 INFO  [org.wildfly.extension.undertow] (ServerService Thread Pool -- 55) WFLYUT0003: Undertow 1.3.21.Final-redhat-1 starting
+11:15:44,792 INFO  [org.jboss.as.security] (MSC service thread 1-4) WFLYSEC0001: Current PicketBox version=4.9.6.Final-redhat-1
+11:15:44,824 INFO  [org.jboss.as.naming] (MSC service thread 1-2) WFLYNAM0003: Starting Naming Service
+11:15:44,825 INFO  [org.jboss.as.mail.extension] (MSC service thread 1-3) WFLYMAIL0001: Bound mail session [java:jboss/mail/Default]
+11:15:44,987 INFO  [org.jboss.as.ejb3] (MSC service thread 1-1) WFLYEJB0482: Strict pool mdb-strict-max-pool is using a max instance size of 8 (per class), which is derived from the number of CPUs on this host.
+11:15:44,987 INFO  [org.jboss.as.ejb3] (MSC service thread 1-4) WFLYEJB0481: Strict pool slsb-strict-max-pool is using a max instance size of 32 (per class), which is derived from thread worker pool sizing.
+11:15:45,048 INFO  [org.wildfly.extension.undertow] (ServerService Thread Pool -- 55) WFLYUT0014: Creating file handler for path '/tmp/jboss-eap-7.0/welcome-content' with options [directory-listing: 'false', follow-symlink: 'false', case-sensitive: 'true', safe-symlink-paths: '[]']
+11:15:45,064 INFO  [org.wildfly.extension.undertow] (MSC service thread 1-2) WFLYUT0012: Started server default-server.
+11:15:45,091 INFO  [org.wildfly.extension.undertow] (MSC service thread 1-4) WFLYUT0018: Host default-host starting
+11:15:45,244 INFO  [org.wildfly.extension.undertow] (MSC service thread 1-2) WFLYUT0006: Undertow HTTP listener default listening on 127.0.0.1:8080
+11:15:45,624 INFO  [org.infinispan.factories.GlobalComponentRegistry] (MSC service thread 1-1) ISPN000128: Infinispan version: Infinispan 'Mahou' 8.1.2.Final-redhat-1
+11:15:45,644 INFO  [org.jboss.ws.common.management] (MSC service thread 1-3) JBWS022052: Starting JBossWS 5.1.3.SP1-redhat-1 (Apache CXF 3.1.4.redhat-1)
+11:15:45,652 INFO  [org.jboss.as.server.deployment.scanner] (MSC service thread 1-1) WFLYDS0013: Started FileSystemDeploymentService for directory /tmp/jboss-eap-7.0/standalone/deployments
+11:15:45,726 INFO  [org.jboss.as.connector.subsystems.datasources] (MSC service thread 1-3) WFLYJCA0001: Bound data source [java:jboss/datasources/ExampleDS]
+11:15:45,882 INFO  [org.jboss.as] (Controller Boot Thread) WFLYSRV0060: Http management interface listening on http://127.0.0.1:9990/management
+11:15:45,890 INFO  [org.jboss.as] (Controller Boot Thread) WFLYSRV0051: Admin console listening on http://127.0.0.1:9990
+11:15:45,890 INFO  [org.jboss.as] (Controller Boot Thread) WFLYSRV0025: JBoss EAP 7.0.0.GA (WildFly Core 2.1.2.Final-redhat-1) started in 3475ms - Started 267 of 553 services (371 services are lazy, passive or on-demand)
+```
+Hit ctrl-c to stop JBoss
+##### Run JBoss in the background
+```
+nohup bin/standalone.sh &
+```
+```
+curl localhost:8080
+```
+```
+<!DOCTYPE html>
+<html>
+<head>
+
+    <title>JBoss EAP 7</title>
+    <!-- proper charset -->
+    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" />
+    <link rel="stylesheet" type="text/css" href="eap.css" />
+    <link rel="shortcut icon" href="favicon.ico" />
+</head>
+
+<body>
+
+<div id="container" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px;">
+
+  <!-- header -->
+  <div class="header-panel">
+    <div class="header-line">&nbsp;</div>
+    <div class="header-top">
+      <img class="prod-title" src="images/product_title.png"/><span class="prod-version">7</span>
+    </div>
+    <div class="header-bottom">&nbsp;</div>
+  </div>
+
+
+  <!-- main content -->
+  <div id="content">
+
+    <div class="section">
+
+      <h1>Welcome to JBoss EAP 7</h1>
+
+      <h3>Your Red Hat JBoss Enterprise Application Platform is running.</h3>
+
+      <p>
+        <a href="/console">Administration Console</a> |
+        <a href="https://access.redhat.com/documentation/en/jboss-enterprise-application-platform/">Documentation</a> |
+        <a href="https://access.redhat.com/discussions">Online User Groups</a> <br/>
+      </p>
+
+      <sub>To replace this page simply deploy your own war with / as its context path.<br/>
+        To disable it, remove the "welcome-content" handler for location / in the undertow subsystem.</sub>
+
+    </div>
+
+  </div>
+
+
+  <div id="footer">&nbsp;</div>
+
+</div>
+
+</body >
+</html>
+```
 #### Install Docker
 ```
 sudo yum search docker
